--- a/css/main.css
+++ b/css/main.css
@@ -118,12 +118,12 @@ nav ul {
 
 .banner {
   padding: 100px 120px;
-  background-image: url(../imagenes/1.png);
+  background-image: url(../imagenes/bannercama6.png);
   background-size: cover; }
   .banner__titulo {
     font-size: 30px;
     padding: 30px 10px;
-    letter-spacing: 17px; }
+    letter-spacing: 15px; }
 
 .carouselGallery {
   margin: calc(4vw + 4vh) auto calc(2vw + 2vh) auto; }
@@ -180,11 +180,12 @@ nav ul {
     font-size: 60px;
     font-family: 'Merriweather', serif;
     text-align: center;
-    color: #4CADC9; }
+    color: #000;
+    margin-top: 10px; }
 
 .contenedor {
   width: 100%;
-  margin: 30px 80px;
+  margin: 10px 80px;
   display: grid;
   grid-template-areas: "buzios zafiro casablanca" "casazul casaverde casarosa";
   grid-template-rows: repeat(2, 1fr);
@@ -278,6 +279,13 @@ section.contenedor {
   text-align: center;
   padding: 10px 0px; }
 
+.promociones__titulo1 {
+  font-size: 60px;
+  font-family: 'Merriweather', serif;
+  text-align: center;
+  color: #4CADC9;
+  margin-top: 150px; }
+
 /*Tabla*/
 .consejos__tabla {
   margin: 90px 60px 0 60px;
@@ -298,20 +306,30 @@ td {
   font-family: "Oswald", sans-serif;
   text-align: left;
   /*padding: 30px 20px;*/
-  margin-left: 10px;
+  margin-left: 1rem;
+  margin-top: 50px;
   word-spacing: 2px; }
 
 /*Carrusel 2 */
 .carrusel {
-  background-color: #BDBDBD; }
+  background-color: #BDBDBD;
+  width: 80%;
+  margin-left: 10%; }
 
 .d-block1 {
-  width: 800px;
-  margin-left: 400px;
+  width: 500px;
+  margin-left: 350px;
   margin-bottom: 40px; }
 
 .mediosdepago__texto {
-  color: #4CADC9; }
+  color: #4CADC9;
+  margin-top: 100px;
+  margin-left: 1rem;
+  margin-top: 1rem; }
+
+.contenedor__consejos2 {
+  margin-right: 5%;
+  margin-left: 5%; }
 
 /*FOOTER */
 .pie {
