--- a/sass/components/_contactanos.scss
+++ b/sass/components/_contactanos.scss
@@ -31,7 +31,7 @@
           font-family: "Rubik", verdana, sans-serif;
           font-weight: 400;
           font-style: italic;
-          font-size: calc(.8rem + .8vw + .8vh);
+          font-size: 2rem;
           line-height: 1.5; 
           list-style: none;}
         .contactInfo__li {
