--- a/sass/components/_quienes.scss
+++ b/sass/components/_quienes.scss
@@ -1,6 +1,6 @@
 .bannerQuienes{
     padding: 100px 120px;
-    background-image: url(../imagenes/quienesbanner.png);
+    background-image: url(../imagenes/bannernosotros.png);
     background-size: cover;
 
 
