--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 .bannercolchones__h1, .bannersommier__h1, .bannerQuienes__titulo, .bannerContactanos__h1 {
   font-size: 30px;
   padding: 30px 10px;
@@ -26,96 +27,149 @@
   border-radius: 20px;
   object-fit: cover; }
 
+.navbar {
+  background-color: #222221; }
+
+.container-fluid1 {
+  display: flex;
+  flex-wrap: inherit;
+  align-items: center;
+  justify-content: space-between; }
+
+.navbar-light .navbar-nav .nav-link {
+  color: #ffff;
+  font-size: 1.5rem; }
+
+.navbar-light .navbar-nav .nav-link.active {
+  color: #ffffff;
+  font-size: 1.5rem; }
+
+.navbar-collapse {
+  margin-top: 10px; }
+
+.d-flex {
+  margin-left: 400px; }
+
+.btn-outline-success {
+  color: #fff;
+  background-color: #4CADC9;
+  border-color: #4CADC9; }
+
+/*
 .navegacion__menu ul {
-  margin: 0px;
-  list-style: none;
-  padding: 0;
-  justify-content: center; }
+    margin: 0px;
+    list-style: none;
+    padding: 0;
+    justify-content: center;
+}
 
 .navegacion__menu li:hover {
-  background: #363233;
-  border-radius: 10px; }
+    background: #363233;
+    border-radius: 10px;
+}
 
 .navegacion__menu li a {
-  display: block;
-  padding: 15px 20px;
-  color: #ffff;
-  text-decoration: none; }
+    display: block;
+    padding: 15px 20px;
+    color: #ffff;
+    text-decoration: none;
+}
 
 .menu__responsive {
-  display: none; }
+    display: none;
+}
 
 nav ul {
-  font-size: 20px;
-  font-family: 'Merriweather', serif;
-  text-align: center;
-  word-spacing: 30px;
-  list-style: none;
-  margin-top: -20px;
-  margin-bottom: 0; }
+    font-size: map-get($tamaño , estandar );
+    font-family: 'Merriweather', serif;
+    text-align: center;
+    word-spacing: 30px;
+    list-style: none;
+    margin-top: -20px;
+    margin-bottom: 0;
+}
 
-.navegacion__menu > li {
-  position: relative;
-  display: inline-block; }
+.navegacion__menu>li {
+    position: relative;
+    display: inline-block;
+}
 
-.navegacion__menu > li > a {
-  display: block;
-  padding: 15px 20px;
-  font-family: "Oswald", sans-serif;
-  color: #ffff;
-  text-decoration: none; }
+.navegacion__menu>li>a {
+    display: block;
+    padding: 15px 20px;
+    font-family: $font-principal;
+    color: #ffff;
+    text-decoration: none;
+}
+
 
 .navegacion__menu li a:hover {
-  color: #5882FA;
-  transition: all .3s; }
+    color: #5882FA;
+    transition: all .3s;
+
+}
 
 .navegacion__submenu {
-  position: absolute;
-  background-color: #819FF7;
-  width: 120%;
-  display: none; }
+    position: absolute;
+    background-color: #819FF7;
+    width: 120%;
+    display: none;
+}
 
 .navegacion__submenu li a {
-  display: block;
-  padding: 15px;
-  color: black;
-  background-color: #E0E6F8;
-  font-family: "Oswald", sans-serif;
-  text-decoration: none; }
+    display: block;
+    padding: 15px;
+    color: black;
+    background-color: #E0E6F8;
+    font-family: $font-principal;
+    text-decoration: none;
+}
 
 .navegacion__menu li:hover .navegacion__submenu {
-  display: block; }
+    display: block
+}
+
 
 .logo__responsive {
-  color: #ffff;
-  font-size: 20px;
-  padding: 0 20px;
-  font-weight: bold; }
+    color: #ffff;
+    font-size: map-get($tamaño , estandar );
+    padding: 0 20px;
+    font-weight: bold;
+}
+
 
 .nav__responvidebutton {
-  position: absolute;
-  width: 100%;
-  font-size: 25px;
-  background-color: #045FB4;
-  margin-top: -64px; }
+    position: absolute;
+    width: $max-width;
+    font-size: 25px;
+    background-color: #045FB4;
+    margin-top: -64px;
+
+}
 
 .buton__menuresponsive {
-  font-size: 30px;
-  padding: 20px 6px;
-  margin-right: 200px;
-  text-align: left;
-  width: 100%; }
+    font-size: map-get($tamaño , medio );
+    padding: 20px 6px;
+    margin-right: 200px;
+    text-align: left;
+    width: $max-width;
+}
 
 .responsive__a {
-  text-decoration: none; }
+    text-decoration: none;
+}
+
 
 .div__submenu {
-  position: absolute;
-  background-color: #819FF7;
-  width: 120%;
-  text-decoration: none;
-  display: none; }
+    position: absolute;
+    background-color: #819FF7;
+    width: 120%;
+    text-decoration: none;
+    display: none;
 
+}
+
+*/
 .banner {
   padding: 100px 120px;
   background-image: url(../imagenes/bannercama6.png);
@@ -491,11 +545,25 @@ section.contenedor1 {
   margin-top: 35px;
   color: #0B0B61; }
 
-.dato__text {
+.dato__text1 {
   font-size: 15px;
   width: 100%;
   padding-right: 100px;
   text-align: left; }
+
+.dato__text2 {
+  font-size: 15px;
+  width: 100%;
+  padding-right: 100px;
+  text-align: left;
+  margin-bottom: 4rem; }
+
+.dato__text3 {
+  font-size: 15px;
+  width: 100%;
+  padding-right: 100px;
+  text-align: left;
+  margin-bottom: 5rem; }
 
 .dato__parrafo {
   color: #000;
