--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 .bannercolchones__h1, .bannersommier__h1, .bannerQuienes__titulo, .bannerContactanos__h1 {
   font-size: 30px;
   padding: 30px 10px;
@@ -55,121 +54,6 @@
   background-color: #4CADC9;
   border-color: #4CADC9; }
 
-/*
-.navegacion__menu ul {
-    margin: 0px;
-    list-style: none;
-    padding: 0;
-    justify-content: center;
-}
-
-.navegacion__menu li:hover {
-    background: #363233;
-    border-radius: 10px;
-}
-
-.navegacion__menu li a {
-    display: block;
-    padding: 15px 20px;
-    color: #ffff;
-    text-decoration: none;
-}
-
-.menu__responsive {
-    display: none;
-}
-
-nav ul {
-    font-size: map-get($tamaño , estandar );
-    font-family: 'Merriweather', serif;
-    text-align: center;
-    word-spacing: 30px;
-    list-style: none;
-    margin-top: -20px;
-    margin-bottom: 0;
-}
-
-.navegacion__menu>li {
-    position: relative;
-    display: inline-block;
-}
-
-.navegacion__menu>li>a {
-    display: block;
-    padding: 15px 20px;
-    font-family: $font-principal;
-    color: #ffff;
-    text-decoration: none;
-}
-
-
-.navegacion__menu li a:hover {
-    color: #5882FA;
-    transition: all .3s;
-
-}
-
-.navegacion__submenu {
-    position: absolute;
-    background-color: #819FF7;
-    width: 120%;
-    display: none;
-}
-
-.navegacion__submenu li a {
-    display: block;
-    padding: 15px;
-    color: black;
-    background-color: #E0E6F8;
-    font-family: $font-principal;
-    text-decoration: none;
-}
-
-.navegacion__menu li:hover .navegacion__submenu {
-    display: block
-}
-
-
-.logo__responsive {
-    color: #ffff;
-    font-size: map-get($tamaño , estandar );
-    padding: 0 20px;
-    font-weight: bold;
-}
-
-
-.nav__responvidebutton {
-    position: absolute;
-    width: $max-width;
-    font-size: 25px;
-    background-color: #045FB4;
-    margin-top: -64px;
-
-}
-
-.buton__menuresponsive {
-    font-size: map-get($tamaño , medio );
-    padding: 20px 6px;
-    margin-right: 200px;
-    text-align: left;
-    width: $max-width;
-}
-
-.responsive__a {
-    text-decoration: none;
-}
-
-
-.div__submenu {
-    position: absolute;
-    background-color: #819FF7;
-    width: 120%;
-    text-decoration: none;
-    display: none;
-
-}
-
-*/
 .banner {
   padding: 100px 120px;
   background-image: url(../imagenes/bannercama6.png);
@@ -203,7 +87,8 @@ nav ul {
   will-change: transform;
   perspective: 1000; }
 
-.carouselGallery__img:hover, .carouselGallery__img:focus {
+.carouselGallery__img:hover,
+.carouselGallery__img:focus {
   border: .5rem solid;
   animation: borderAnimation 2000ms linear infinite;
   box-shadow: none; }
@@ -222,7 +107,8 @@ nav ul {
   opacity: .5;
   background-color: rgba(25, 29, 50, 0.5); }
 
-.carouselGalleryB, .carouselGalleryC {
+.carouselGalleryB,
+.carouselGalleryC {
   display: none; }
 
 /*Promociones */
@@ -368,7 +254,7 @@ td {
 
 /*Carrusel 2 */
 .carrusel {
-  background-color: #BDBDBD;
+  background-color: #FFFFFF;
   width: 80%;
   margin-left: 10%; }
 
@@ -376,6 +262,12 @@ td {
   width: 500px;
   margin-left: 350px;
   margin-bottom: 40px; }
+
+.carousel-control-prev-icon {
+  color: #000; }
+
+.carousel-control-next {
+  color: #BDBDBD; }
 
 .mediosdepago__texto {
   color: #0B0B61;
@@ -422,6 +314,14 @@ td {
     align-self: center;
     font-family: 'Roboto', sans-serif;
     text-transform: capitalize; }
+
+.mapa {
+  color: #ffff;
+  text-decoration: none;
+  list-style: none; }
+  .mapa__titulo {
+    font-size: 20px;
+    font-family: "Oswald", sans-serif; }
 
 .bannercolchones {
   padding: 100px 120px;
@@ -917,22 +817,16 @@ section.sommier {
 
 /*tablets */
 @media only screen and (max-width: 952px) {
-  .menu {
-    display: flex;
-    flex-direction: row;
-    background-color: #0B243B; }
   .logo {
     display: none; }
-  .menu li a {
-    color: #ffff; }
   .banner {
     padding: 100px 90px; }
-  .flex-contenedor {
+  .contenedor {
     display: grid;
     margin-left: 5px;
-    grid-template-areas: "buzios zafiro casablanca" " casazul casaverde casarosa";
+    grid-template-areas: "buzios zafiro" "casablanca casazul" "casaverde casarosa";
     grid-template-rows: repeat(2, 1fr);
-    grid-template-columns: repeat(3 1fr); }
+    grid-template-columns: repeat(2 1fr); }
   .promo1 {
     font-size: 30px; }
   .contenedor_imagenPrincipal {
@@ -950,6 +844,10 @@ section.sommier {
   .consejos2 {
     padding: 5px 3px;
     font-size: 10px; }
+  .mediosdepago__texto {
+    display: none; }
+  .carrusel {
+    display: none; }
   .pie {
     display: inline-flex;
     justify-content: space-around;
@@ -966,7 +864,7 @@ section.sommier {
   .pie__datoa {
     text-decoration: none; } }
 
-@media only screen and (max-width: 952px) and (max-width: 767px) {
+@media only screen and (max-width: 767px) {
   #logotipo {
     background-color: #0B0B3B;
     color: #ffff; }
@@ -974,50 +872,12 @@ section.sommier {
     display: none; }
   .logotipo__img {
     display: none; }
-  .navegacion__menu {
-    display: none; }
-  nav {
-    height: 27px;
-    margin: -30px;
-    margin-top: 1px;
-    background-color: #ffff; }
-  .menu__responsive {
-    display: block;
-    position: absolute;
-    width: 100%;
-    height: 75%;
-    margin-top: 37px;
-    padding-top: 27px; }
-  .nav__responvidebutton {
-    background-color: #0B0B3B; }
-  .div__responsive {
-    position: relative;
-    top: -1000px;
-    background: #0B173B;
-    transition: all 1s;
-    z-index: 1;
-    width: 80%;
-    height: 70%;
-    padding-top: 10px; }
-  .responsive_li {
-    width: 100%;
-    padding: 30px 20px; }
-  .responsive_li a {
-    color: #ffff;
-    text-decoration: none; }
-  .submenu {
-    display: none; }
-  .menu__responsive:hover > .div__responsive {
-    top: -2px; }
-  .cabezera {
-    display: flex;
-    flex-direction: column;
-    width: 100%; }
-  .flex-contenedor {
+  /*productos inicios*/
+  .contenedor {
     display: grid;
     margin-left: 5px;
     grid-template-areas: "buzios zafiro" "casablanca casazul" " casaverde casarosa";
-    grid-template-rows: repeat(3, 1fr);
+    grid-template-rows: repeat(2, 1fr);
     grid-template-columns: repeat(2, 1fr); }
   .promo1 {
     font-size: 30px;
@@ -1036,6 +896,11 @@ section.sommier {
   .consejos2 {
     padding: 5px 3px;
     font-size: 10px; }
+  .mediosdepago__texto {
+    display: none; }
+  .carrusel {
+    display: none; }
+  /*footer*/
   .pie {
     display: inline-flex;
     justify-content: space-around;
@@ -1045,7 +910,17 @@ section.sommier {
   .pie__dato {
     font-size: 20px; }
   .a_piedato {
-    text-decoration: none; } }
+    text-decoration: none; }
+  /*contactanos*/
+  .text__h3 {
+    height: 190px; }
+  .formulario {
+    min-width: 70px;
+    flex: 1;
+    text-align: center;
+    padding: 20px; }
+  .contactInfo__ul {
+    font-size: 25px; } }
 
 /*tel moviles */
 @media only screen and (max-width: 420px) {
@@ -1056,41 +931,10 @@ section.sommier {
     display: none; }
   .logotipo__img {
     display: none; }
-  .navegacion__menu {
-    display: none; }
-  nav {
-    height: 27px;
-    margin: -30px;
-    margin-top: 1px;
-    background-color: #ffff; }
-  .menu__responsive {
-    display: block;
-    position: absolute;
-    width: 100%;
-    height: 75%;
-    margin-top: 37px;
-    padding-top: 27px; }
-  .nav__responvidebutton {
-    background-color: #0B0B3B; }
-  .div__responsive {
-    position: relative;
-    top: -1000px;
-    background: #0B173B;
-    transition: all 1s;
-    z-index: 1;
-    width: 80%;
-    height: 70%;
-    padding-top: 10px; }
-  .responsive_li {
-    width: 100%;
-    padding: 30px 20px; }
-  .responsive_li a {
-    color: #ffff;
-    text-decoration: none; }
-  .submenu {
-    display: none; }
-  .menu__responsive:hover > .div__responsive {
-    top: -2px; }
+  .promociones__titulo {
+    font-size: 40px; }
+  .carouselGallery__imgContainer {
+    width: 70%; }
   .cabezera {
     display: flex;
     flex-direction: column;
@@ -1099,12 +943,12 @@ section.sommier {
     display: none; }
   #promociones {
     margin-top: 100px; }
-  .flex-contenedor {
+  .contenedor {
     display: grid;
     margin-left: 5px;
-    grid-template-areas: "buzios zafiro" "casablanca casazul" " casaverde casarosa";
-    grid-template-rows: repeat(3, 1fr);
-    grid-template-columns: repeat(2, 1fr); }
+    grid-template-areas: "buzios " "casablanca " " casaverde ";
+    grid-template-rows: repeat(1, 1fr);
+    grid-template-columns: repeat(1, 1fr); }
   .promo1 {
     font-size: 30px; }
   .contenedor_imagenPrincipal {
@@ -1122,6 +966,11 @@ section.sommier {
   .consejos2 {
     padding: 5px 3px;
     font-size: 10px; }
+  .mediosdepago__texto {
+    display: none; }
+  .carrusel {
+    display: none; }
+  /*Footer */
   .pie-flex {
     display: inline-flex;
     justify-content: space-around;
@@ -1150,7 +999,7 @@ section.sommier {
     display: grid;
     justify-content: space-evenly;
     grid-template-areas: "matter1 matter2 " "matter4 matter5" "matter3 matter6";
-    grid-template-rows: repeat(3, 1fr);
+    grid-template-rows: repeat(2, 1fr);
     grid-template-columns: repeat(2, 1fr);
     grid-row-gap: 20px; }
   .unocolchon {
@@ -1202,16 +1051,22 @@ section.sommier {
     display: none; }
   .tituloNosotros {
     margin: 50px; }
-  #Sobrenosotros {
-    display: flex;
-    justify-content: right; }
-  .sobrenosotros__p {
-    margin: 10px; }
-  .cont__consultas2 {
+  .nosotrosFoto__foto1 {
     display: none; }
+  .nosotrosFoto_foto2 {
+    display: none; }
+  .nosotros__texto {
+    width: 100%;
+    margin-bottom: 20px;
+    margin-top: 20px;
+    height: 10%; }
   /*contactanos*/
+  .text__h3 {
+    height: 190px; }
   .formulario {
     min-width: 70px;
     flex: 1;
     text-align: center;
-    padding: 20px; } }
+    padding: 20px; }
+  .contactInfo__ul {
+    font-size: 25px; } }
