--- a/sass/components/_mediaqueries.scss
+++ b/sass/components/_mediaqueries.scss
@@ -1,32 +1,25 @@
 /*tablets */
 @media only screen and (max-width: 952px) {
 
-    .menu {
-        display: flex;
-        flex-direction: row;
-        background-color: #0B243B;
-    }
 
     .logo {
         display: none;
-    }
-
-    .menu li a {
-        color: #ffff
     }
 
     .banner {
         padding: 100px 90px;
     }
 
-    .flex-contenedor {
+
+    .contenedor {
         display: grid;
         margin-left: 5px;
         grid-template-areas:
-            "buzios zafiro casablanca"
-            " casazul casaverde casarosa";
+            "buzios zafiro"
+            "casablanca casazul"
+            "casaverde casarosa";
         grid-template-rows: repeat(2, 1fr);
-        grid-template-columns: repeat(3 1fr);
+        grid-template-columns: repeat(2 1fr);
     }
 
     .promo1 {
@@ -58,6 +51,15 @@
         font-size: 10px;
     }
 
+    .mediosdepago__texto {
+        display: none;
+    }
+
+    .carrusel {
+        display: none;
+
+    }
+
     .pie {
         display: inline-flex;
         justify-content: space-around;
@@ -85,151 +87,123 @@
         text-decoration: none;
     }
 
-
-    @media only screen and (max-width:767px) {
-
-        #logotipo {
-            background-color: #0B0B3B;
-            color: #ffff
-        }
-
-        .logotipo {
-            display: none;
-        }
-
-        .logotipo__img {
-            display: none;
-        }
+}
 
 
-        .navegacion__menu {
-            display: none;
-        }
+@media only screen and (max-width:767px) {
 
-        nav {
-            height: 27px;
-            margin: -30px;
-            margin-top: 1px;
-            background-color: #ffff;
-        }
+    #logotipo {
+        background-color: #0B0B3B;
+        color: #ffff
+    }
 
-        .menu__responsive {
-            display: block;
-            position: absolute;
-            width: 100%;
-            height: 75%;
-            margin-top: 37px;
-            padding-top: 27px;
+    .logotipo {
+        display: none;
+    }
 
-        }
+    .logotipo__img {
+        display: none;
+    }
 
-        .nav__responvidebutton {
-            background-color: #0B0B3B;
-        }
+    /*productos inicios*/
 
-        .div__responsive {
-            position: relative;
-            top: -1000px;
-            background: #0B173B;
-            transition: all 1s;
-            z-index: 1;
-            width: 80%;
-            height: 70%;
-            padding-top: 10px;
+    .contenedor {
+        display: grid;
+        margin-left: 5px;
+        grid-template-areas:
+            "buzios zafiro"
+            "casablanca casazul"
+            " casaverde casarosa";
+        grid-template-rows: repeat(2, 1fr);
+        grid-template-columns: repeat(2, 1fr);
+    }
 
-        }
-
-        .responsive_li {
-            width: 100%;
-            padding: 30px 20px;
-        }
-
-        .responsive_li a {
-            color: #ffff;
-            text-decoration: none;
-        }
-
-        .submenu {
-            display: none;
-        }
-
-        .menu__responsive:hover>.div__responsive {
-            top: -2px;
-        }
-
-        .cabezera {
-            display: flex;
-            flex-direction: column;
-            width: 100%
-        }
-
-        .flex-contenedor {
-            display: grid;
-            margin-left: 5px;
-            grid-template-areas:
-                "buzios zafiro"
-                "casablanca casazul"
-                " casaverde casarosa";
-            grid-template-rows: repeat(3, 1fr);
-            grid-template-columns: repeat(2, 1fr);
-        }
-
-        .promo1 {
-            font-size: 30px;
-            text-align: left;
-
-        }
-
-        .contenedor_imagenPrincipal {
-            width: 100px;
-        }
-
-        .consejo1 {
-            font-size: 30px;
-        }
-
-        .consejop {
-            font-size: 15px;
-        }
-
-        table {
-            margin-top: 20px;
-            margin-left: 2%;
-            width: 50px;
-            height: 60px;
-        }
-
-        .consejos2 {
-            padding: 5px 3px;
-            font-size: 10px;
-        }
-
-        .pie {
-            display: inline-flex;
-            justify-content: space-around;
-
-            width: 100%;
-        }
-
-
-        .pie__flex2 {
-            font-size: 12px;
-        }
-
-        .pie__dato {
-            font-size: 20px;
-        }
-
-
-
-        .a_piedato {
-            text-decoration: none;
-        }
-
+    .promo1 {
+        font-size: 30px;
+        text-align: left;
 
     }
 
+    .contenedor_imagenPrincipal {
+        width: 100px;
+    }
+
+    .consejo1 {
+        font-size: 30px;
+    }
+
+    .consejop {
+        font-size: 15px;
+    }
+
+    table {
+        margin-top: 20px;
+        margin-left: 2%;
+        width: 50px;
+        height: 60px;
+    }
+
+    .consejos2 {
+        padding: 5px 3px;
+        font-size: 10px;
+    }
+
+    .mediosdepago__texto {
+        display: none;
+    }
+
+    .carrusel {
+        display: none;
+    }
+    
+
+    /*footer*/
+    .pie {
+        display: inline-flex;
+        justify-content: space-around;
+
+        width: 100%;
+    }
+
+
+    .pie__flex2 {
+        font-size: 12px;
+    }
+
+    .pie__dato {
+        font-size: 20px;
+    }
+
+
+    .a_piedato {
+        text-decoration: none;
+    }
+
+
+    
+
+    /*contactanos*/
+
+    .text__h3 {
+        height: 190px;
+
+    }
+
+    .formulario {
+        min-width: 70px;
+        flex: 1;
+        text-align: center;
+        padding: 20px;
+
+    }
+
+    .contactInfo__ul {
+        font-size: 25px;
+    }
+
+
 }
+
 
 /*tel moviles */
 @media only screen and (max-width:420px) {
@@ -247,60 +221,12 @@
         display: none;
     }
 
-
-    .navegacion__menu {
-        display: none;
+    .promociones__titulo {
+        font-size: 40px;
     }
 
-    nav {
-        height: 27px;
-        margin: -30px;
-        margin-top: 1px;
-        background-color: #ffff;
-    }
-
-    .menu__responsive {
-        display: block;
-        position: absolute;
-        width: 100%;
-        height: 75%;
-        margin-top: 37px;
-        padding-top: 27px;
-
-    }
-
-    .nav__responvidebutton {
-        background-color: #0B0B3B;
-    }
-
-    .div__responsive {
-        position: relative;
-        top: -1000px;
-        background: #0B173B;
-        transition: all 1s;
-        z-index: 1;
-        width: 80%;
-        height: 70%;
-        padding-top: 10px;
-
-    }
-
-    .responsive_li {
-        width: 100%;
-        padding: 30px 20px;
-    }
-
-    .responsive_li a {
-        color: #ffff;
-        text-decoration: none;
-    }
-
-    .submenu {
-        display: none;
-    }
-
-    .menu__responsive:hover>.div__responsive {
-        top: -2px;
+    .carouselGallery__imgContainer {
+        width: 70%;
     }
 
     .cabezera {
@@ -317,16 +243,19 @@
         margin-top: 100px;
     }
 
-    .flex-contenedor {
+
+
+    .contenedor {
         display: grid;
         margin-left: 5px;
         grid-template-areas:
-            "buzios zafiro"
-            "casablanca casazul"
-            " casaverde casarosa";
-        grid-template-rows: repeat(3, 1fr);
-        grid-template-columns: repeat(2, 1fr);
+            "buzios "
+            "casablanca "
+            " casaverde ";
+        grid-template-rows: repeat(1, 1fr);
+        grid-template-columns: repeat(1, 1fr);
     }
+
 
     .promo1 {
         font-size: 30px;
@@ -357,6 +286,18 @@
         padding: 5px 3px;
         font-size: 10px;
     }
+
+
+    .mediosdepago__texto {
+        display: none;
+    }
+
+    .carrusel {
+        display: none;
+
+    }
+
+    /*Footer */
 
     .pie-flex {
         display: inline-flex;
@@ -407,7 +348,7 @@
             "matter1 matter2 "
             "matter4 matter5"
             "matter3 matter6";
-        grid-template-rows: repeat(3, 1fr);
+        grid-template-rows: repeat(2, 1fr);
         grid-template-columns: repeat(2, 1fr);
         grid-row-gap: 20px;
     }
@@ -501,21 +442,27 @@
         margin: 50px;
     }
 
-    #Sobrenosotros {
-        display: flex;
-        justify-content: right;
-
-    }
-
-    .sobrenosotros__p {
-        margin: 10px
-    }
-
-    .cont__consultas2 {
+    .nosotrosFoto__foto1 {
         display: none;
     }
 
+    .nosotrosFoto_foto2 {
+        display: none;
+    }
+
+    .nosotros__texto {
+        width: 100%;
+        margin-bottom: 20px;
+        margin-top: 20px;
+        height: 10%;
+    }
+
     /*contactanos*/
+
+    .text__h3 {
+        height: 190px;
+
+    }
 
     .formulario {
         min-width: 70px;
@@ -524,5 +471,10 @@
         padding: 20px;
 
     }
+
+    .contactInfo__ul {
+        font-size: 25px;
+    }
+
 
 }
