--- a/sass/components/_colchones.scss
+++ b/sass/components/_colchones.scss
@@ -90,6 +90,17 @@ section.contenedor1 {
 }
 
 .botonColchones {
+    padding: 12px 24px;
+    margin-top: 30px;
+    background-Color: #0B243B;
+    border-Radius: 7px;
+    outline: 2px solid #0B243B;
+    outline-offset: 2px;
+    transition: transform 250ms cubic-bezier(0.2, 0.8, 0.4, 1);
+}
+
+
+.botonColchones {
      @extend %botonesCompra;
      color:#ffff;
 }
