--- a/sass/components/_contactanos.scss
+++ b/sass/components/_contactanos.scss
@@ -31,7 +31,7 @@
           font-family: "Rubik", verdana, sans-serif;
           font-weight: 400;
           font-style: italic;
-          font-size: 2rem;
+          font-size: 1.5rem;
           line-height: 1.5; 
           list-style: none;}
         .contactInfo__li {
@@ -65,6 +65,9 @@
             justify-content: center;
             background: #FBF5EF;
             margin: 50px 50px;
+            margin-left: 15rem;
+            width:60%;
+
         }
             .formulario {
                 min-width: 400px;
