--- a/sass/components/_inicio.scss
+++ b/sass/components/_inicio.scss
@@ -50,11 +50,30 @@
 
 }
 
+.form-control {
+    display: block;
+    padding: .375rem .75rem;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #212529;
+    background-color: #fff;
+    background-clip: padding-box;
+    border: 1px solid #ced4da;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    border-radius: .25rem;
+    transition: border-color .15s ease-in-out, box-shadow .15s ease-in-out;
+}
+
+
 .btn-outline-success {
     color: #fff;
     background-color: #4CADC9;
     border-color: #4CADC9;
 }
+
 
 
 .banner {
@@ -211,7 +230,7 @@ section.contenedor {
 
 .contenedor__buttoncash {
     padding: 12px 24px;
-    margin-top: 20px;
+    margin-top: 30px;
     background-Color: #0B243B;
     border-Radius: 7px;
     outline: 2px solid #0B243B;
@@ -324,13 +343,14 @@ td {
     margin-bottom: 40px;
 }
 
-.carousel-control-prev-icon{
-    color:#000;
+.carousel-control-prev-icon {
+    color: #000;
 }
 
-.carousel-control-next{
-    color:#BDBDBD;
+.carousel-control-next {
+    color: #BDBDBD;
 }
+
 .mediosdepago__texto {
 
     color: #0B0B61;
@@ -394,15 +414,15 @@ td {
     }
 }
 
-.mapa{
-    color:#ffff;
-    text-decoration:none ;
+.mapa {
+    color: #ffff;
+    text-decoration: none;
     list-style: none;
-   
 
-    &__titulo{
-    font-size: 20px;
-    font-family: $font-principal;
-    
+
+    &__titulo {
+        font-size: 20px;
+        font-family: $font-principal;
+
     }
 }
