--- a/css/main.css
+++ b/css/main.css
@@ -698,13 +698,11 @@ section.sommier {
   display: flex;
   font-family: "Rubik", verdana, sans-serif;
   font-weight: 800;
-  /*font-style: normal;*/
   font-size: 25px;
   background-color: #6db4bf;
   color: #ffffff;
   width: 100%;
-  height: 50px;
-  /*text-shadow: 0 0 0.4rem #0489B1;*/
+  height: 5rem;
   text-align: center;
   margin-top: calc(2vw + 2vh); }
 
@@ -738,7 +736,7 @@ section.sommier {
   border: none;
   border-bottom: 3px solid #D8D8D8;
   background: transparent;
-  color: #0000; }
+  color: #1C1C1C; }
 
 .form__input:focus {
   background: linear-gradient(to bottom, transparent, #D8D8D8);
