--- a/sass/components/_contactanos.scss
+++ b/sass/components/_contactanos.scss
@@ -41,13 +41,11 @@
         display:flex;
         font-family: "Rubik", verdana, sans-serif;
         font-weight: 800;
-        /*font-style: normal;*/
         font-size: 25px;
         background-color: #6db4bf;
         color: #ffffff;
         width: 100%;
-        height: 50px;
-        /*text-shadow: 0 0 0.4rem #0489B1;*/
+        height: 5rem;
         text-align: center;
         margin-top: calc(2vw + 2vh);
         }
@@ -83,7 +81,7 @@
                     border: none;
                     border-bottom: 3px solid #D8D8D8;
                     background: transparent;
-                    color: #0000;
+                    color: #1C1C1C;
                 }
                     .form__input:focus {
                         background: linear-gradient(to bottom, transparent, #D8D8D8);
