--- a/sass/components/_inicio.scss
+++ b/sass/components/_inicio.scss
@@ -46,8 +46,7 @@
 }
 
 .d-flex {
-    margin-left: 300px;
-
+    margin-left: 400px;
 }
 
 .form-control {
@@ -423,6 +422,7 @@ td {
     &__titulo {
         font-size: 20px;
         font-family: $font-principal;
+        margin-top:1rem;
 
     }
 }
